# FinDashCpp

./: .gitignore  CMakeLists.txt  CROSS_PLATFORM_BUILD.md  PLATFORM_COMPATIBILITY.md  QXLSX_BUILD_FIXED.md  QXLSX_MIGRATION.md  QXLSX_NATIVE_APPROACH.md  REBUILD_INSTRUCTIONS.md  REBUILD_NOW.md  SETUP_EXCEL_EXPORT.md  config.json.example
config/: template.xlsx
src/: clients.cpp  clients.h  config.cpp  config.h  dashboard.cpp  dashboard.h  excel_export.py  export_xlsx.cpp  export_xlsx.h  lsk_api.cpp  lsk_api.h  lsk_tokens.cpp  lsk_tokens.h  main.cpp  models.cpp  models.h  threads.cpp  threads.h  widgets.cpp  widgets.h
